--- a/index.html
+++ b/index.html
@@ -5,9 +5,304 @@
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vite App</title>
+  <link rel="stylesheet" href="/src/assets/main.css" />
 </head>
 <body>
 <div id="app"></div>
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
+
+<template>
+  <form @submit.prevent="handleSubmit">
+    <!-- Beschreibung -->
+    <input
+      type="text"
+      v-model="newTransaction.beschreibung"
+      placeholder="Beschreibung"
+      required
+    />
+
+    <!-- Betrag -->
+    <input
+      type="number"
+      v-model="newTransaction.betrag"
+      placeholder="Betrag"
+      required
+      min="0.01"
+      step="0.01"
+    />
+
+    <!-- Kategorie -->
+    <select v-model="newTransaction.kategorie" required>
+      <option value="">Kategorie wählen</option>
+      <option value="Lebensmittel">Lebensmittel</option>
+      <option value="Miete">Miete</option>
+      <option value="Transport">Transport</option>
+      <option value="Unterhaltung">Unterhaltung</option>
+      <option value="Gesundheit">Gesundheit</option>
+      <option value="Bildung">Bildung</option>
+      <option value="Sonstiges">Sonstiges</option>
+    </select>
+
+    <!-- Typ -->
+    <select v-model="newTransaction.typ" required>
+      <option value="">Typ wählen</option>
+      <option value="Einnahme">Einnahme</option>
+      <option value="Ausgabe">Ausgabe</option>
+    </select>
+
+    <!-- Datum -->
+    <input
+      type="date"
+      v-model="newTransaction.datum"
+      required
+    />
+
+    <!-- Buttons -->
+    <div class="button-group">
+      <button type="submit" :disabled="isLoading" class="add-button">
+        {{ isEditing ? "Aktualisieren" : "Hinzufügen" }}
+      </button>
+      <button
+        type="button"
+        @click="deleteTransaction"
+        class="delete-button"
+        v-if="isEditing"
+      >
+        Löschen
+      </button>
+      <button
+        type="button"
+        @click="editBudget"
+        class="update-budget-button"
+      >
+        Budget ändern
+      </button>
+      <button
+        type="button"
+        @click="deleteBudget"
+        class="delete-budget-button"
+      >
+        Budget löschen
+      </button>
+    </div>
+
+    <!-- Fehlermeldung -->
+    <p v-if="errorMessage" class="error-message">{{ errorMessage }}</p>
+  </form>
+</template>
+
+<script>
+  import { addTransaction, updateTransaction, deleteTransaction, updateBudget, deleteBudget } from "@/services/apiService";
+
+  export default {
+    props: {
+      transactionToEdit: {
+        type: Object,
+        default: null,
+      },
+    },
+    data() {
+      return {
+        newTransaction: {
+          beschreibung: "",
+          betrag: 0,
+          kategorie: "",
+          typ: "",
+          datum: "",
+        },
+        isLoading: false,
+        errorMessage: "",
+        isEditing: false,
+      };
+    },
+    methods: {
+      async handleSubmit() {
+        if (!this.validateTransaction()) {
+          this.errorMessage =
+            "Bitte füllen Sie alle Felder aus und geben Sie einen gültigen Betrag ein.";
+          return;
+        }
+
+        this.isLoading = true;
+        this.errorMessage = "";
+
+        try {
+          if (this.isEditing) {
+            await updateTransaction(this.newTransaction); // API-Aufruf für Update
+            this.$emit("transactionUpdated", this.newTransaction);
+          } else {
+            await addTransaction(this.newTransaction); // API-Aufruf für Add
+            this.$emit("transactionAdded");
+          }
+          this.resetForm(); // Formular zurücksetzen
+        } catch (error) {
+          this.errorMessage =
+            "Fehler beim Speichern der Transaktion. Bitte erneut versuchen.";
+          console.error(error);
+        } finally {
+          this.isLoading = false;
+        }
+      },
+      async deleteTransaction() {
+        if (!this.newTransaction.id) {
+          this.errorMessage = "Keine Transaktion zum Löschen ausgewählt.";
+          return;
+        }
+
+        this.isLoading = true;
+        try {
+          await deleteTransaction(this.newTransaction.id); // API-Aufruf
+          this.$emit("transactionDeleted", this.newTransaction.id);
+          this.resetForm();
+        } catch (error) {
+          this.errorMessage = "Fehler beim Löschen der Transaktion. Bitte erneut versuchen.";
+          console.error(error);
+        } finally {
+          this.isLoading = false;
+        }
+      },
+      async editBudget() {
+        try {
+          this.isLoading = true;
+          await updateBudget(this.newTransaction);
+          this.$emit("budgetUpdated", this.newTransaction);
+        } catch (error) {
+          this.errorMessage = "Fehler beim Ändern des Budgets. Bitte erneut versuchen.";
+          console.error(error);
+        } finally {
+          this.isLoading = false;
+        }
+      },
+      async deleteBudget() {
+        try {
+          this.isLoading = true;
+          await deleteBudget(this.newTransaction.id);
+          this.$emit("budgetDeleted", this.newTransaction.id);
+          this.resetForm();
+        } catch (error) {
+          this.errorMessage = "Fehler beim Löschen des Budgets. Bitte erneut versuchen.";
+          console.error(error);
+        } finally {
+          this.isLoading = false;
+        }
+      },
+      validateTransaction() {
+        const { beschreibung, betrag, kategorie, typ, datum } = this.newTransaction;
+        return beschreibung && betrag > 0 && kategorie && typ && datum;
+      },
+      resetForm() {
+        this.newTransaction = {
+          beschreibung: "",
+          betrag: 0,
+          kategorie: "",
+          typ: "",
+          datum: "",
+        };
+        this.isEditing = false;
+      },
+    },
+    watch: {
+      transactionToEdit: {
+        immediate: true,
+        handler(newValue) {
+          if (newValue) {
+            this.newTransaction = { ...newValue };
+            this.isEditing = true;
+          } else {
+            this.resetForm();
+          }
+        },
+      },
+    },
+  };
+</script>
+
+<style scoped>
+    .transaction-form-container {
+        background-color: #ffffff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        margin-top: 20px;
+        max-width: 600px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .transaction-form {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .button-group {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        flex-wrap: wrap;
+    }
+
+    .add-button {
+        background-color: #007bff;
+        color: white;
+        font-size: 18px;
+        padding: 15px;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+    }
+
+    .add-button:hover {
+        background-color: #0056b3;
+    }
+
+    .delete-button {
+        background-color: #dc3545;
+        color: white;
+        font-size: 18px;
+        padding: 15px;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+    }
+
+    .delete-button:hover {
+        background-color: #a71d2a;
+    }
+
+    .update-budget-button {
+        background-color: #ffc107;
+        color: black;
+        font-size: 18px;
+        padding: 15px;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+    }
+
+    .update-budget-button:hover {
+        background-color: #e0a800;
+    }
+
+    .delete-budget-button {
+        background-color: #6c757d;
+        color: white;
+        font-size: 18px;
+        padding: 15px;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+    }
+
+    .delete-budget-button:hover {
+        background-color: #5a6268;
+    }
+
+    .error-message {
+        color: red;
+        font-size: 16px;
+        text-align: center;
+    }
+</style>
